--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -23,10 +23,13 @@
             </button>
             <div class="collapse navbar-collapse" id="navbar">
                 <div class="navbar-nav">
+                    {% if user.is_authenticated %}
+                    <a class="nav-item nav-link" id="Home" href="/">Home</a>
+                    <a class="nav-item nav-link" id="Logout" href="/logout">Logout</a>
+                    {% else %}
                     <a class="nav-item nav-link" id="Login" href="/login">Login</a>
                     <a class="nav-item nav-link" id="Signup" href="/signup">Signup</a>
-                    <a class="nav-item nav-link" id="Logout" href="/logout">Logout</a>
-                    <a class="nav-item nav-link" id="Home" href="/">Home</a>
+                    {% endif %}
                 </div>
             </div>
         </nav>
